# MeiBrowser-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
core/: Cargo.toml  build.rs
core/src/: dispatch.rs  download.rs  file_tree.rs  lib.rs  main.rs  pause.rs  sophon.rs  theme_gen.rs  utils.rs
core/src/gui/: mod.rs  state.rs  theme.rs  util.rs
core/src/gui/handlers/: config.rs  download.rs  files.rs  mod.rs  navigation.rs  packages.rs
core/ui/: app.slint  icons.slint  state.slint  theme.slint  types.slint
core/ui/components/: buttons.slint  cards.slint  inputs.slint  progress-bar.slint  topbar.slint
core/ui/pages/: config.slint  done.slint  downloading.slint  files.slint  home.slint  packages.slint  summary.slint
proto/: Cargo.toml  build.rs
