[workspace]
members = ["proto","core"]
resolver = "2"

[workspace.package]
version = "0.1.0"


[workspace.dependencies]
anyhow = "1.0"
eframe = "0.25.0"
egui = "0.25.0"
md5 = "0.8.0"
prost = "0.12.1"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
rfd = "0.14.1"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
zstd = "0.13.0"
rayon = "1.8.0" # for parallel downloads
semver = "1.0.22" # for version parsing
mei-proto = { path = "proto" }
mei-core = { path = "core"}

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimize for speed.
codegen-units = 1 # Maximum size reduction optimizations.
